force-app/main/default/objects/Opportunity/fields/ARR__c.field-meta.xml
<CustomField>
    <fullName>ARR__c</fullName>
    <inlineHelpText>Sum of all recurring Fees.</inlineHelpText>
    <label>ARR</label>
    <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Is_Recurring_Fee__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>