force-app/main/default/objects/Opportunity/fields/Avg_Product_Margin__c.field-meta.xml
<CustomField>
    <fullName>Avg_Product_Margin__c</fullName>
    <formula>Total_Margin__c / Opportunity_Product_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avg. Product Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>