force-app/main/default/objects/Opportunity/fields/Billing_Entity__c.field-meta.xml
<CustomField>
    <fullName>Billing_Entity__c</fullName>
    <label>Billing Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BM_Entity</valueSetName>
    </valueSet>
</CustomField>