force-app/main/default/objects/Opportunity/fields/BM_Cost__c.field-meta.xml
<CustomField>
    <fullName>BM_Cost__c</fullName>
    <label>BM Cost</label>
    <summarizedField>OpportunityLineItem.BM_Cost__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>