force-app/main/default/objects/Opportunity/fields/Child_Opportunities_Value__c.field-meta.xml
<CustomField>
    <fullName>Child_Opportunities_Value__c</fullName>
    <label>Child Opportunities Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>