force-app/main/default/objects/Opportunity/fields/Commencement_Date__c.field-meta.xml
<CustomField>
    <fullName>Commencement_Date__c</fullName>
    <label>Commencement Date</label>
    <type>Date</type>
</CustomField>