force-app/main/default/objects/Opportunity/fields/Contracting_Account__c.field-meta.xml
<CustomField>
    <fullName>Contracting_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contracting Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contracting Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>