force-app/main/default/objects/Opportunity/fields/Contracting_Entity__c.field-meta.xml
<CustomField>
    <fullName>Contracting_Entity__c</fullName>
    <label>Contracting Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BM_Entity</valueSetName>
    </valueSet>
</CustomField>