force-app/main/default/objects/Opportunity/fields/Fees_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Fees_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fees Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>