force-app/main/default/objects/Opportunity/fields/Is_Currently_Live__c.field-meta.xml
<CustomField>
    <fullName>Is_Currently_Live__c</fullName>
    <formula>AND(
IsWon,
TODAY() &gt;  Commencement_Date__c,
OR(TODAY() &lt;  Opportunity_End_Date__c,
ISBLANK(Opportunity_End_Date__c))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Currently Live?</label>
    <type>Checkbox</type>
</CustomField>