force-app/main/default/objects/Opportunity/fields/Is_First_Year_of_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Is_First_Year_of_Opportunity__c</fullName>
    <formula>AND(
  Commencement_Date__c &lt;= TODAY(),
  TODAY() &lt; ADDMONTHS(Commencement_Date__c, 12)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is First Year of Opportunity?</label>
    <type>Checkbox</type>
</CustomField>