force-app/main/default/objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <label>Loss Reason(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Weak product fit/value proposition</fullName>
            </value>
            <value>
                <fullName>Uncompetitive pricing</fullName>
            </value>
            <value>
                <fullName>Client budget contraints</fullName>
            </value>
            <value>
                <fullName>Internal resistance</fullName>
            </value>
            <value>
                <fullName>Wrong audience/No decision making power</fullName>
            </value>
            <value>
                <fullName>Poor follow up and communication</fullName>
            </value>
            <value>
                <fullName>Compliance Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>