force-app/main/default/objects/Opportunity/fields/Net_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Net_Revenue__c</fullName>
    <formula>Amount -  BM_Cost__c -  Partner_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Gross Revenue - Total Cost (BM and Partner Cost)</inlineHelpText>
    <label>Net Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>