force-app/main/default/objects/Opportunity/fields/No_of_Child_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>No_of_Child_Opportunities__c</fullName>
    <label>No. of Child Opportunities</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>