force-app/main/default/objects/Opportunity/fields/One_off_Fees_Total__c.field-meta.xml
<CustomField>
    <fullName>One_off_Fees_Total__c</fullName>
    <label>One-off Fees Total</label>
    <summarizedField>OpportunityLineItem.UnitPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Is_Recurring_Fee__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>