force-app/main/default/objects/Opportunity/fields/Opportunity_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_End_Date__c</fullName>
    <label>Opportunity End Date</label>
    <type>Date</type>
</CustomField>