force-app/main/default/objects/Opportunity/fields/Other_Countries_from_Lead_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Other_Countries_from_Lead_Conversion__c</fullName>
    <label>Other Countries (from Lead Conversion)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>