force-app/main/default/objects/Opportunity/fields/Partner_Cost__c.field-meta.xml
<CustomField>
    <fullName>Partner_Cost__c</fullName>
    <label>Partner Cost</label>
    <summarizedField>OpportunityLineItem.Partner_Cost__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>