force-app/main/default/objects/Opportunity/fields/Risk_Rating_Score_Location__c.field-meta.xml
<CustomField>
    <fullName>Risk_Rating_Score_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Populated when Location is set or updated - provides a link to Location Risk Assessment.</description>
    <label>Risk Rating Score - Location</label>
    <referenceTo>Risk_Rating_Score_Location__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>