force-app/main/default/objects/Opportunity/fields/Services_Requested_Covered__c.field-meta.xml
<CustomField>
    <fullName>Services_Requested_Covered__c</fullName>
    <label>Service(s) Requested / Covered</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Category</valueSetName>
    </valueSet>
</CustomField>