force-app/main/default/objects/Opportunity/fields/Servicing_and_Contracting_Account_Same__c.field-meta.xml
<CustomField>
    <fullName>Servicing_and_Contracting_Account_Same__c</fullName>
    <formula>AccountId =  Contracting_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Servicing and Contracting Account Same</label>
    <type>Checkbox</type>
</CustomField>