force-app/main/default/objects/Opportunity/fields/Show_Entity_Warning__c.field-meta.xml
<CustomField>
    <fullName>Show_Entity_Warning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Entity Warning</label>
    <type>Checkbox</type>
</CustomField>