force-app/main/default/objects/Opportunity/fields/Total_Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Contract_Value__c</fullName>
    <formula>Total_Opportunity_Value__c +  Child_Opportunities_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sum of child Opportunities&apos; Value and current Opportunity Value.</inlineHelpText>
    <label>Total Contract Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>