force-app/main/default/objects/Opportunity/fields/Total_Margin__c.field-meta.xml
<CustomField>
    <fullName>Total_Margin__c</fullName>
    <label>Total Margin</label>
    <summarizedField>OpportunityLineItem.Margin__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>