force-app/main/default/objects/Opportunity/fields/Won_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Won_Reasons__c</fullName>
    <label>Won Reason(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strong product fit/value proposition</fullName>
            </value>
            <value>
                <fullName>Competitive pricing</fullName>
            </value>
            <value>
                <fullName>Existing relationship</fullName>
            </value>
            <value>
                <fullName>Established trust (i.e. references/referrals)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>