force-app/main/default/objects/Opportunity/validationRules/CannotChangeAccountOnceProductsSet.validationRule-meta.xml
<ValidationRule>
    <fullName>CannotChangeAccountOnceProductsSet</fullName>
    <active>true</active>
    <description>Cannot change Account once Products are set.</description>
    <errorConditionFormula>AND(
HasOpportunityLineItem,
OR(
ISCHANGED( AccountId ),
ISCHANGED( Contracting_Account__c ),
ISCHANGED( Billing_Account__c )
),
NOT( $Permission.Change_Account_on_Opportunity_Once_Products_Are_Set )
)</errorConditionFormula>
    <errorMessage>Cannot change Account once Products are added, contact your System Admin for help.</errorMessage>
</ValidationRule>