force-app/main/default/objects/Opportunity/validationRules/CannotCreateIfComplianceRejected.validationRule-meta.xml
<ValidationRule>
    <fullName>CannotCreateIfComplianceRejected</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
ISNEW(),
OR
(
ISPICKVAL( Account.Compliance_Status__c, &apos;Rejected&apos;),
ISPICKVAL( Contracting_Account__r.Compliance_Status__c, &apos;Rejected&apos;),
ISPICKVAL( Billing_Account__r.Compliance_Status__c, &apos;Rejected&apos;)
)
)</errorConditionFormula>
    <errorMessage>Cannot create a new Opportunity for an Account with Rejected Compliance Status.</errorMessage>
</ValidationRule>