force-app/main/default/objects/Opportunity/validationRules/CannotUpdateIfSanctionedCountry.validationRule-meta.xml
<ValidationRule>
    <fullName>CannotUpdateIfSanctionedCountry</fullName>
    <active>true</active>
    <description>When Location is sanctioned, the Opportunity Stage cannot be changed to other value than Closed Lost.</description>
    <errorConditionFormula>AND (
ISCHANGED(StageName),
NOT(ISPICKVAL(StageName, &apos;Closed Lost&apos;)),
Risk_Rating_Score_Location__r.Is_Sanctioned__c
)</errorConditionFormula>
    <errorMessage>Cannot modify Opportunity Stage when Location is sanctioned.</errorMessage>
</ValidationRule>