force-app/main/default/objects/Opportunity/validationRules/Currency_MultiLevelOpportunity.validationRule-meta.xml
<ValidationRule>
    <fullName>Currency_MultiLevelOpportunity</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISPICKVAL(CurrencyIsoCode, &apos;HKD&apos;)),
No_of_Child_Opportunities__c &gt; 0
)</errorConditionFormula>
    <errorMessage>Parent Opportunity currency must be HKD.</errorMessage>
</ValidationRule>