force-app/main/default/objects/Opportunity/validationRules/Stage_CannotSkipValue.validationRule-meta.xml
<ValidationRule>
    <fullName>Stage_CannotSkipValue</fullName>
    <active>false</active>
    <description>Ensures each stage can move only forward one step or to Closed Lost.</description>
    <errorConditionFormula>AND(
  ISCHANGED(StageName),

  NOT( ISPICKVAL(StageName, &quot;Closed Lost&quot;) ),

  CASE(TEXT(StageName),
    &quot;Opportunity Qualification&quot;, 1,
    &quot;Scoping and Value Proposition Development&quot;, 2,
    &quot;Proposal Creation&quot;, 3,
    &quot;Contracting&quot;, 4,
    &quot;Contract Signature&quot;, 5,
    &quot;Closed Won&quot;, 6,
    &quot;Closed Lost&quot;, 99, /* special, already allowed above */
    0
  )
  &gt;
  CASE(TEXT(PRIORVALUE(StageName)),
    &quot;Opportunity Qualification&quot;, 1,
    &quot;Scoping and Value Proposition Development&quot;, 2,
    &quot;Proposal Creation&quot;, 3,
    &quot;Contracting&quot;, 4,
    &quot;Contract Signature&quot;, 5,
    &quot;Closed Won&quot;, 6,
    &quot;Closed Lost&quot;, 99,
    0
  )
  + 1
)</errorConditionFormula>
    <errorMessage>You can’t skip stages. Please move to the next stage in order.</errorMessage>
</ValidationRule>