force-app/main/default/objects/Opportunity/validationRules/StageClosedLost_ProvideReason.validationRule-meta.xml
<ValidationRule>
    <fullName>StageClosedLost_ProvideReason</fullName>
    <active>true</active>
    <description>When Opportunity is Closed Lost, specify Loss Reason(s).</description>
    <errorConditionFormula>AND(
ISCHANGED(StageName),
ISPICKVAL(StageName, &apos;Closed Lost&apos;),
ISBLANK(Loss_Reason__c)
)</errorConditionFormula>
    <errorDisplayField>Loss_Reason__c</errorDisplayField>
    <errorMessage>Choose reason why Opportunity was lost.</errorMessage>
</ValidationRule>