force-app/main/default/objects/Opportunity/validationRules/StageClosedWon_CommencementDate.validationRule-meta.xml
<ValidationRule>
    <fullName>StageClosedWon_CommencementDate</fullName>
    <active>true</active>
    <description>When Opportunity is Closed Won, populate the Commencement Date.</description>
    <errorConditionFormula>AND(
ISCHANGED(StageName),
ISPICKVAL(StageName, &apos;Closed Won&apos;),
ISBLANK(Commencement_Date__c)
)</errorConditionFormula>
    <errorDisplayField>Commencement_Date__c</errorDisplayField>
    <errorMessage>Populate the Commencement Date.</errorMessage>
</ValidationRule>