force-app/main/default/objects/Opportunity/validationRules/StageClosedWon_Contract.validationRule-meta.xml
<ValidationRule>
    <fullName>StageClosedWon_Contract</fullName>
    <active>true</active>
    <description>When Opportunity is Closed Won, populate the Contract Id.</description>
    <errorConditionFormula>AND(
ISCHANGED(StageName),
ISPICKVAL(StageName, &apos;Closed Won&apos;),
ISBLANK(ContractId)
)</errorConditionFormula>
    <errorDisplayField>ContractId</errorDisplayField>
    <errorMessage>Link Contract.</errorMessage>
</ValidationRule>