force-app/main/default/objects/Opportunity/validationRules/StageClosedWon_ContractTerms.validationRule-meta.xml
<ValidationRule>
    <fullName>StageClosedWon_ContractTerms</fullName>
    <active>true</active>
    <description>When Opportunity is Closed Won, populate the Contract Length (Months).</description>
    <errorConditionFormula>AND(
ISCHANGED(StageName),
ISPICKVAL(StageName, &apos;Closed Won&apos;),
ISBLANK( Contract_Length_Months__c )
)</errorConditionFormula>
    <errorDisplayField>Contract_Length_Months__c</errorDisplayField>
    <errorMessage>Populate the Contract Length (Months).</errorMessage>
</ValidationRule>