force-app/main/default/objects/Opportunity/validationRules/StageClosedWon_ProvideReason.validationRule-meta.xml
<ValidationRule>
    <fullName>StageClosedWon_ProvideReason</fullName>
    <active>true</active>
    <description>When Opportunity is Closed Won, specify Won Reason(s).</description>
    <errorConditionFormula>AND(
ISCHANGED(StageName),
ISPICKVAL(StageName, &apos;Closed Won&apos;),
ISBLANK(Won_Reasons__c)
)</errorConditionFormula>
    <errorDisplayField>Won_Reasons__c</errorDisplayField>
    <errorMessage>Choose reason why Opportunity was won.</errorMessage>
</ValidationRule>