force-app/main/default/objects/Opportunity/validationRules/StageProposalCreation_FeesApproval.validationRule-meta.xml
<ValidationRule>
    <fullName>StageProposalCreation_FeesApproval</fullName>
    <active>true</active>
    <description>Before sending out to the client, the fee approval process must have been completed.</description>
    <errorConditionFormula>AND(
ISCHANGED(StageName),
ISPICKVAL(StageName, &apos;Proposal Creation&apos;),
NOT(ISPICKVAL(Fees_Approval_Status__c, &apos;Approved&apos;))
)</errorConditionFormula>
    <errorMessage>Cannot move to Proposal Creation stage until fees are approved. Submit the record for approval.</errorMessage>
</ValidationRule>